# tensorflow-1-public

./: .gitignore
C1/W1/assignment/: assignment.py
C1/W1/ungraded_lab/: lab.py  pyproject.toml
C1/W2/assignment/: assignment.py
C1/W2/ungraded_labs/: lab_1.py  lab_2.py
C1/W3/assignment/: assignment.py
C1/W3/ungraded_labs/: lab1.py  lab2.py
C1/W4/ungraded_labs/: lab1.py  lab1test.py  lab2.py
